# Spatial_Data_Mining_Winter2026

./: setup.cfg
source/: conf.py  index.rst  rtd_requirements.txt
source/tutorials/L1/: assignment-1.rst  git_and_github.rst  python_installation.rst
