[metadata]
name = ENGO645-Lab
version = 2026
license = MIT
author = Bahareh Raei
url = https://github.com/Raei-Bahareh/Spatial_Data_Mining_Winter2026
classifiers =
	Development Status :: 2 -
	Environment :: Web Environment
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Programming Language :: Python :: 3.12

[options]
packages = find:
include_package_data = True
zip_safe = False

[tool:release]
github_owner = Raei-Bahareh
github_repo = Spatial_Data_Mining_Winter2026